--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 header {
     display: flex;
@@ -13,12 +14,31 @@ header {
     padding: 0;
 }
 
+body{
+    height: 100%;
+    width: 100%;
+}
+
+.pag1{
+    background-color: aqua  ;
+    height: 100vh;
+    width: 100vw;
+    
+}
+/* -------------------------------------------------CABECERA------------------------------------------------ */
+/* Palabras */
 .menu {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     width: 80%;
     margin: 0;
     padding: 0;
+}
+
+.menu > a{
+    color: black;
+    text-decoration: none;
 }
 
 .menu-item{
@@ -29,10 +49,11 @@ header {
 }
 
 
+/* Icono categoria */
 .categoria{
     background-color: transparent;
     border: none;
-    color: white;
+    color: black;
     vertical-align: middle;
 }
 
@@ -41,9 +62,22 @@ header {
     border: none;      
     background: none;          
     border-bottom: 2px solid #000; 
-    display: flex;
-    justify-content: center;  /* Centra horizontalmente */
-    align-items: center;      /* Centra verticalmente */
-    height: 100px;            
+    display: flex;        
+    
 }
+
+
+/* PIE */
+
+.centro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.esquinaInferior  p {
+    font-weight: bold;
+    margin-left: 2%;
+} 
+
+
 
