--- a/index.css
+++ b/index.css
@@ -3,27 +3,41 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
 header {
+    position: fixed;
     display: flex;
     justify-content: space-between;
     text-align: center;
     width: 100%;
     margin: 0;
     padding: 0;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background-color: transparent;
 }
 
 body{
     height: 100%;
     width: 100%;
+    font-family: 'Babe', sans-serif;
+    font-weight: bold;
+    overflow-x: hidden;
+   
+    
 }
 
-.pag1{
-    background-color: aqua  ;
-    height: 100vh;
-    width: 100vw;
-    
+
+.pag1, .pag2, .pag3, .pag4 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 50px 10%;
 }
 /* -------------------------------------------------CABECERA------------------------------------------------ */
 /* Palabras */
@@ -57,6 +71,10 @@ body{
     vertical-align: middle;
 }
 
+.categoria span{
+    margin-left: 100%;
+}
+
 /* Barra del buscador */
 .buscador {
     border: none;      
@@ -66,6 +84,18 @@ body{
     
 }
 
+/* Logo ajustarlo */
+.logo{ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+
+.logo img{
+    margin-right: 80%;
+}
+/* -------------------------------------------------PAGINA 1------------------------------------------------ */
 
 /* PIE */
 
@@ -73,11 +103,70 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
-.esquinaInferior  p {
+
+.centro img{
+    margin-top: 10%;
+    height: 500%;
+}
+
+.esquinaInferior {
     font-weight: bold;
     margin-left: 2%;
+    margin-top: 5%;
 } 
 
+/* -------------------------------------------------PAGINA 2------------------------------------------------ */
+
+/* OCUPAR 50 Y 50 */
+
+.pag2{
+    background: linear-gradient(to right, #a8e6ff 50%, white 50%);
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 1%;
+}
+
+.tituloPresentacion {
+    width: 50%;
+    padding: 10px; 
+    text-align: center;
+}
+
+.presentacionText {
+    width: 50%; 
+    padding: 10px; 
+    text-align: right;
+}
+
+.presentacionText h1 {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 50%; /* Agrega espacio debajo del título */
+}
+
+.presentacionText h2 {
+    color: #6ca4c8;
+    font-size: 1.8em;
+    margin-top: 40px; /* Espacio antes del segundo título */
+    margin-bottom: 20px;
+}
+
+.presentacionText p {
+    line-height: 1.5;
+    margin-bottom: 20px; /* Espacio debajo del párrafo */
+}
+
+.presentacionText button {
+    background-color: #6ca4c8;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    cursor: pointer;
+    border-radius: 5px;
+}
 
 
